refractor: alignment corrections css

--- a/recipe_book/src/pages/home/Home.css
+++ b/recipe_book/src/pages/home/Home.css
@@ -21,5 +21,5 @@
 }
 
 .item-name{
-    font-size: 18px;
+    font-size: 20px;
 }
